*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6121 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-awards-MR/aw-awards.html
+++ b/kra-coeus-awards-MR/aw-awards.html
@@ -307,7 +307,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 </tr>
                 <tr>
                   <th><div align=right>
-                      <label for="label7">*Sponsor:</label>
+                      <label for="label7">*Sponsor ID:</label>
                   </div></th>
                   <td><input name="startDate43" type=text onchange="dataChanged()" value="" size=12 id="startDate42"/>
                     <input name="image2" type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
@@ -348,7 +348,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 </tr>
                 <tr>
                   <th><div align=right>
-                      <label for="label11">Prime Sponsor: </label>                  
+                      <label for="label11">Prime Sponsor ID: </label>                  
                   </div></th>
                   <td align=left valign=middle><input name="startDate432" type=text onchange="dataChanged()" value="" size=12 id="startDate43"/>
                     <input name="image23" type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
@@ -363,9 +363,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   
                 </tr>
               </table>
-              <br>
-              <img src="images/aw-details.jpg" alt="Premium" width="652" height="347"><br>
-              <br>
             </div>
             <div class="h2-container"><span class="subhead-left">
               <h2>Dates</h2>
