--- a/kra-coeus-irb-8-27/irb-protocol-MR.html
+++ b/kra-coeus-irb-8-27/irb-protocol-MR.html
@@ -241,7 +241,7 @@ Non-employee Search
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G423" style="display: nonee;">
+          <div class="tab-container" align="center" id="G423" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Additional Information</h2>
               </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
@@ -273,14 +273,9 @@ Non-employee Search
               </tr>
               <tr>
                 <th><div align=right>
-                    <label for="area of research">*Area of Research:</label>
+                    <label for="area of research">Exemption #:</label>
                 </div></th>
-                <td align=left valign=middle><input name="startDate2" type=text onchange="dataChanged()" value="" size=12 id="area of research"/>
-                    <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
-                    <input type="image" class="nobord" src="../images/book_open.png" alt="inquiry"></td>
-                <th><div align="right">Exemption #:</div></th>
-                <td align=left valign=middle><select onchange="dataChanged()" name="activityType" id="activityType">
-                  <option selected>select</option>
+                <td align=left valign=middle colspan='3'><select name="prtcl_aprv_pnd_ind_param.6" size="6" multiple value="" >
                   <option>E1</option>
                   <option>E2</option>
                   <option>E3</option>
@@ -288,9 +283,79 @@ Non-employee Search
                   <option>E5</option>
                   <option>E6</option>
                 </select></td>
+                
+              </tr>
+            </table><br>
+          <div class="h2-container"> <span class="subhead-left">
+              <h2>Area of Research</h2>
+              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+		  <table align=center cellpadding=0 cellspacing=0 summary="">
+              <!-- <tr>
+                        <td colspan="6" class="tab-subhead"><div align="left">Consultants</div></td>
+                      </tr> -->
+              <tr>
+                <th>&nbsp;</th>
+                <th><div align=left>Description</div></th>
+                <th width="20%">Actions</th>
+              </tr>
+              <tr>
+                <th class="infoline">Add:</th>
+                <td class="infoline">(select) <a href="#">
+                  <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
+                  </a></td>
+                <td class="infoline"><div align=center></div></td>
+              </tr>
+              <tr>
+                <th>1</th>
+                <td><span> Biology <a href="#">
+                  <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
+                  </a></span></td>
+                <td><div align=center>
+                    <input name="SubContractFlag2" type=checkbox class="nobord" onclick="dataChanged()" value=Y />
+                  </div></td>
+              </tr>
+              <tr>
+                <th>2</th>
+                <td><span> Chemistry <a href="#">
+                  <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
+                  </a></span></td>
+                <td><div align=center>
+                    <input name="SubContractFlag2" type=checkbox class="nobord" onclick="dataChanged()" value=Y />
+                  </div></td>
+              </tr>
+              <tr>
+                <th>3</th>
+                <td><span> History<a href="#">
+                  <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
+                  </a></span></td>
+                <td><div align=center>
+                    <input name="SubContractFlag2" type=checkbox class="nobord" onclick="dataChanged()" value=Y />
+                  </div></td>
+              </tr>
+              <tr>
+                <th>4</th>
+                <td><span> Geography <a href="#">
+                  <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
+                </a></span></td>
+                <td><div align=center>
+                    <input name="SubContractFlag2" type=checkbox class="nobord" onclick="dataChanged()" value=Y />
+                  </div></td>
+              </tr>
+              <tr>
+                <th>5</th>
+                <td><span> Sociology <a href="#">
+                  <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
+                  </a></span></td>
+                <td><div align=center>
+                    <input name="SubContractFlag2" type=checkbox class="nobord" onclick="dataChanged()" value=Y />
+                  </div></td>
+              </tr>
+              <tr>
+                <td colspan=2 class="infoline">&nbsp;</td>
+                <td nowrap class="infoline"><div align=center><a href="#"><img src="../images/tinybutton-selectall.gif" alt="delete" width=56 height=15 hspace=3 vspace=3 border=0><img src="../images/tinybutton-deleteselected.gif" alt="delete" width=88 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
             </table>
-          </div>
+		  </div>
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Organization</td>
