COI module changes
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6129 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-COI/coi-addFinancialEntity.html
+++ b/kra-coeus-COI/coi-addFinancialEntity.html
@@ -64,6 +64,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </span></dt>  <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-reviewDisclosure.html');return document.MM_returnValue" value="Review Disclosure">
         </span></dt>  
+   <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-actions.html');return document.MM_returnValue" value="COI Actions">
+        </span></dt> 
+        <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-notes.html');return document.MM_returnValue" value="Notes & Attachments">
+        </span></dt>  
     </dl>
   </div>
 </div>
