--- a/kra-coeus-COI/coi-reviewFinancialEntity.html
+++ b/kra-coeus-COI/coi-reviewFinancialEntity.html
@@ -64,6 +64,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </span></dt>  <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-reviewDisclosure.html');return document.MM_returnValue" value="Review Disclosure">
         </span></dt>  
+   <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-actions.html');return document.MM_returnValue" value="COI Actions">
+        </span></dt> 
+        <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-notes.html');return document.MM_returnValue" value="Notes & Attachments">
+        </span></dt>  
     </dl>
   </div>
 </div>
