irb SME updates
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6131 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-irb-8-27/irb-irbmanagement.html
+++ b/kra-coeus-irb-8-27/irb-irbmanagement.html
@@ -56,7 +56,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       
 
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-protocol-MR.html');return document.MM_returnValue" value="Protocol">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-protocol-MR2.html');return document.MM_returnValue" value="Protocol">
         </span></dt>  <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-personnel.html');return document.MM_returnValue" value="Personnel">
         </span></dt>  <dt><span class="tabright">
