--- a/kra-coeus-irb-8-27/irb-notes.html
+++ b/kra-coeus-irb-8-27/irb-notes.html
@@ -56,7 +56,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       
 
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-protocol-MR.html');return document.MM_returnValue" value="Protocol">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-protocol-MR2.html');return document.MM_returnValue" value="Protocol">
         </span></dt>  <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-personnel.html');return document.MM_returnValue" value="Personnel">
         </span></dt>  <dt><span class="tabright">
