--- a/kra-coeus-awards-MR/aw-contacts.html
+++ b/kra-coeus-awards-MR/aw-contacts.html
@@ -861,7 +861,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td><div align=center> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
             </tr>
           </table>
-        </div>
+       <br><img src="../images/tinybutton-synctotemplate.gif">
+	    </div>
       <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
            <tr>
              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="blank" width="12" height="29" align="absmiddle" > OSP Contacts (5)             </td>
