BFN: Addressed SME review comments in JIRA https://test.kuali.org/jira/browse/KRAFUNC-67 .
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6175 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-awards-MR/aw-actions.html
+++ b/kra-coeus-awards-MR/aw-actions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<html> 
 <head> 
 <title>Kuali</title>
 <LINK REL="SHORTCUT ICON" HREF="../images/icon.ico">
@@ -22,10 +22,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 //-->
 </script>
 </head>
-<body> 
+<body>
 <form name="example"  method="post" action="">
 <div class="headerarea-kra" id="headerarea">
-  <h1>Award - Actions <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
+  <h1>TESTAward - Actions <a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
     <div class="headerbox">
     <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
         <tr>
@@ -62,7 +62,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </span></dt>  <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Time & Money">
         </span></dt>  <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-payments-reports-terms.html');return document.MM_returnValue" value="Payments, Reports & Terms">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-payments-reports-terms.html');return document.MM_returnValue" value="Payment, Reports & Terms">
         </span></dt> <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-specialreview.html');return document.MM_returnValue" value="Special Review">
         </span></dt> <dt><span class="tabright">
@@ -73,7 +73,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-permissions.html');return document.MM_returnValue" value="Permissions">
         </span></dt> 
 <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Notes & Attachments">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Comments &amp; Attachments">
         </span></dt> <dt class="licurrent" ><span class="tabright tabcurrent">
         <input name="Submit2" type="submit" onClick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions">
         </span></dt>  
@@ -192,7 +192,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
            
             <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
               <tr>
-                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Print Forms</td>
+                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Print</td>
            
               <td class="tabtable2-mid"><a href="#" id="A04" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F04" vspace=6></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
