--- a/kra-coeus-awards-MR/aw-contacts.html
+++ b/kra-coeus-awards-MR/aw-contacts.html
@@ -63,7 +63,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Time & Money ">
         </span></dt>
 	  <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-payments-reports-terms.html');return document.MM_returnValue" value="Payments, Reports & Terms">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-payments-reports-terms.html');return document.MM_returnValue" value="Payment, Reports & Terms">
         </span></dt>
 	  <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-specialreview.html');return document.MM_returnValue" value="Special Review">
@@ -78,7 +78,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-permissions.html');return document.MM_returnValue" value="Permissions">
         </span></dt>
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Notes & Attachments">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Comments &amp; Attachments">
         </span></dt>
       <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions">
